--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -35,3 +35,4 @@
 @import "modules/_registration-info";
 @import "modules/_hookah-filters";
 @import "modules/_hookah-photo-add";
+@import "modules/_hookah-single";
