--- a/#src/scss/layout/_extra.scss
+++ b/#src/scss/layout/_extra.scss
@@ -322,6 +322,12 @@
     &:hover {
         color: #363636;
     }
+
+    &__icon {
+        width: 24px;
+        height: 24px;
+        margin-right: 5px;
+    }
 }
 
 .position-relative {
