--- a/#src/scss/modules/_hookah-single.scss
+++ b/#src/scss/modules/_hookah-single.scss
@@ -16,8 +16,10 @@
     &__img {
         width: 100%;
         max-height: auto;
+        cursor: pointer;
     }
 }
+
 
 .hookah-rate {
     &__list {}
