--- a/#src/scss/modules/_single-product.scss
+++ b/#src/scss/modules/_single-product.scss
@@ -1,3 +1,25 @@
+.single-product-swiper {
+    &__wrapper {}
+
+    &__geoposition {
+        position: absolute;
+        z-index: 999;
+        bottom: 4px;
+        width: 100%;
+    }
+
+    &__slide {
+        background-size: cover;
+        background-position: center;
+    }
+
+    &__img {
+        width: 100%;
+        max-height: auto;
+        cursor: pointer;
+    }
+}
+
 .section-single-product {
     padding-top: 20px;
 }
