--- a/#src/scss/modules/_registration-info.scss
+++ b/#src/scss/modules/_registration-info.scss
@@ -137,6 +137,12 @@
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
 }
 
+.checkbox-wgts-wrapper {
+    @media (min-width: 992px) {
+        max-width: 90%;
+    }
+}
+
 .checkbox-wgts {
     display: flex;
     justify-content: space-between;
@@ -175,6 +181,13 @@
         letter-spacing: 0.01em;
         color: #363636;
         padding: 0 20px;
+    }
+
+    &__field {
+        border: 1px solid #eee8e8;
+        padding: 5px;
+        text-align: center;
+        width: 30px;
     }
 
     &__edit-btn {
