--- a/#src/scss/modules/_section-partners.scss
+++ b/#src/scss/modules/_section-partners.scss
@@ -23,9 +23,13 @@
         padding-bottom: 20px;
 
         @media(min-width:992px) {
-            width: 60%;
-            padding: 50px 100px;
+            width: 65%;
+            padding: 50px 100px 50px 100px;
             padding-right: 20px;
+        }
+
+        @media(min-width:1200px) {
+            padding: 50px 200px 50px 100px;
         }
     }
 
@@ -79,7 +83,7 @@
         align-items: center;
 
         @media(min-width:992px) {
-            width: 39%;
+            width: 35%;
         }
     }
 
