--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -16,6 +16,7 @@
 // Page styles
 @import "modules/_header";
 @import "modules/_footer";
+@import "modules/_modal";
 @import "modules/_section-main";
 @import "modules/_section-buy";
 @import "modules/_section-advertising";
