--- a/#src/scss/modules/_modal.scss
+++ b/#src/scss/modules/_modal.scss
@@ -7,7 +7,7 @@
     height: 100%;
     overflow: hidden;
     background-color: rgba(0, 0, 0, .5);
-    // display: none;
+    display: none;
     opacity: 0;
     transition: all 2s;
 }
@@ -46,7 +46,6 @@
     animation-timing-function: ease-out;
     animation-fill-mode: forwards;
     animation-delay: 0s;
-
 
     @keyframes close {
         0% {
