--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -1,3 +1,7 @@
+@import '../../node_modules/bootstrap/scss/bootstrap-grid.scss';
+@import '../../node_modules/swiper/swiper.scss';
+// @import '../../node_modules/fancybox/dist/jquery.fancybox.css';
+
 @import "base/_variables";
 @import "base/_mixins";
 @import "base/_reset";
